css/style.css
html {
    font-family: Arial;
    width: 90%;
    margin: auto;
}

/* styles for title box */
.outline-header input {
    font-size: 25px;
    font-weight: bold;
    border:none;
    width:100%;
}
.outline-header input:hover {
    font-size: 25px;
    font-weight: bold;
    border:none;
    width:100%;
    outline: 2px solid #eee;
}

.outline-list {
    list-style-type: none;
    padding: 0;
    margin:none;
}

/* styles for lines */
.outline-list div {
    width: 100%;
}
.outline-list div:hover {
    outline: 2px solid #eee;
}
.outline-list div:focus {
    outline: 2px solid #bbb;
}

/* styles for line indentation levels */
.level1 {
    font-size: 20px;
    padding: 4px;
}
.level2 {
    font-size: 18px;
    padding: 2px;
}
.level3 {
    font-size: 16px;
}
.level4 {
    font-size: 14px;
}

